# WifiSurfaceAnalyzer

./: .gitignore  Abstract.md  README.md  pyproject.toml  requirements.txt
docs/: PROJECT_DETAILS.md
src/wifi_surface_analyzer/: analyze.py  capture.py  cli.py  io.py  models.py  reporting.py  risk.py
src/wifi_surface_analyzer/web/: app.py  run.py
src/wifi_surface_analyzer/web/templates/: base.html  index.html  report.html
