[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-surface-analyzer"
version = "0.1.0"
description = "Advanced Wi-Fi attack surface analyzer (passive recon + risk prioritization)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scapy>=2.5.0",
  "rich>=13.7.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.3",
  "python-multipart>=0.0.9",
]

[project.scripts]
wsa = "wifi_surface_analyzer.cli:main"
wsa-web = "wifi_surface_analyzer.web.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wifi_surface_analyzer.web" = ["templates/*.html", "static/*"]

